Practica01_split/12/stdargErrors.txt~
wfnSprintf.c: En la función ‘int main()’:
wfnSprintf.c:22:42: aviso: conversión obsoleta de una constante de cadena a ‘char*’ [-Wwrite-strings]
    Myprintf(" WWW.FIRMCODES.COM \n %d", 9);
                                          ^
wfnSprintf.c: En la función ‘void Myprintf(char*, ...)’:
wfnSprintf.c:35:4: error: ‘va_list’ no se declaró en este ámbito
    va_list arg;
    ^
wfnSprintf.c:36:13: error: ‘arg’ no se declaró en este ámbito
    va_start(arg, format);
             ^
wfnSprintf.c:36:24: error: ‘va_start’ no se declaró en este ámbito
    va_start(arg, format);
                        ^
wfnSprintf.c:51:32: error: expected primary-expression before ‘int’
      case 'c' : i = va_arg(arg,int);  //Fetch char argument
                                ^
wfnSprintf.c:51:35: error: ‘va_arg’ no se declaró en este ámbito
      case 'c' : i = va_arg(arg,int);  //Fetch char argument
                                   ^
wfnSprintf.c:55:32: error: expected primary-expression before ‘int’
      case 'd' : i = va_arg(arg,int);   //Fetch Decimal/Integer argument
                                ^
wfnSprintf.c:64:31: error: expected primary-expression before ‘unsigned’
      case 'o': i = va_arg(arg,unsigned int); //Fetch Octal representation
                               ^
wfnSprintf.c:68:31: error: expected primary-expression before ‘char’
      case 's': s = va_arg(arg,char *);   //Fetch string
                               ^
wfnSprintf.c:72:31: error: expected primary-expression before ‘unsigned’
      case 'x': i = va_arg(arg,unsigned int); //Fetch Hexadecimal representation
                               ^
wfnSprintf.c:79:14: error: ‘va_end’ no se declaró en este ámbito
    va_end(arg);
              ^
